--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "antd": "^4.16.13",
     "axios": "^0.22.0",
     "chart.js": "^3.5.1",
+    "html-react-parser": "^1.4.0",
     "millify": "^4.0.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
